Created package infos with nullability annotations